jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

DllImport int ECF_GetCliche(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetCNPJ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetComandoEnviado(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataHoraSB(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetDataMovimento(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetIE(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetIM(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCCF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCDC(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCRO(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumCRZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGNF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumGRG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetPAF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRespostaComando(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetSubModeloECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetUsuarioAtual(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);